chore: deploy pipeline

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 16
       - run: |
-        cd ./application-webcomponents
+        cd application-webcomponents
         npm ci
         npm run build
   publish-npm:
