chore: deploy pipeline

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -29,8 +29,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://registry.npmjs.org
+          scope: '@wizco'
+          always-auth: true
       - run: npm install
       - run: npm publish ./application-webcomponents
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
