chore: deploy pipeline public folder

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -3,23 +3,7 @@ name: Node.js Package
 on: [push]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: lista de arquivos
-        run: |
-          ls -la
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Build
-        run: |
-          cd application-webcomponents
-          npm install
-          npm run build
-  publish-npm:
-    needs: build
+  build-publish-npm:
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -32,7 +16,14 @@ jobs:
           registry-url: https://registry.npmjs.org
           scope: '@wizco'
           always-auth: true
-      - run: npm install
-      - run: npm publish ./application-webcomponents
+      - run: |
+          cd application-webcomponents
+          npm install
+      - run: |
+          cd application-webcomponents
+          npm run build
+      - run: |
+          cd application-webcomponents
+          npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
