--- a/package.json
+++ b/package.json
@@ -12,19 +12,14 @@
     "postrun:local": "ng g @wizco/schematics-webcomponents:init",
     "schematics:intall": "yarn --cwd ./application-webcomponents install",
     "schematics:build": "yarn --cwd ./application-webcomponents build",
-    "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents",
-    "extra:build": "ng build --project loklok --output-hashing none --aot --build-optimizer",
-    "extra:build:staging": "ng build --configuration=staging --project loklok --output-hashing none --aot --build-optimizer",
-    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
+    "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents"
   },
   "private": true,
   "dependencies": {
-    "@angular-architects/module-federation": "^15.0.3",
     "@angular/animations": "^15.2.0",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
-    "@angular/elements": "^15.2.5",
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
