feat: update version angular

--- a/application-webcomponents/src/template-webcomponents/files/src/assets/config.json.template
+++ b/application-webcomponents/src/template-webcomponents/files/src/assets/config.json.template
@@ -1,5 +1,7 @@
 {
   "path": "<%= relativePathToWorkspaceRoot %>/<%= name %>",
   "name": "<%= name %>",
-  "tag": "wc-<%= prefix %>-module"
+  "tag": "wc-<%= prefix %>-module",
+  "type: "web-components",
+  "exposedModule": "./web-components",
 }
