--- a/angular.json
+++ b/angular.json
@@ -99,6 +99,116 @@
 					}
 				}
 			}
+		},
+		"modulo": {
+			"projectType": "application",
+			"schematics": {
+				"@schematics/angular:component": {
+					"style": "scss"
+				}
+			},
+			"root": "projects/modulo",
+			"sourceRoot": "projects/modulo/src",
+			"prefix": "package",
+			"architect": {
+				"build": {
+					"builder": "ngx-build-plus:browser",
+					"options": {
+						"outputPath": "dist/modulo",
+						"index": "projects/modulo/src/index.html",
+						"main": "projects/modulo/src/main.ts",
+						"polyfills": "projects/modulo/src/polyfills.ts",
+						"tsConfig": "projects/modulo/tsconfig.app.json",
+						"inlineStyleLanguage": "scss",
+						"assets": [
+							"projects/modulo/src/favicon.ico",
+							"projects/modulo/src/assets"
+						],
+						"styles": [
+							"src/styles.scss"
+						],
+						"scripts": [],
+						"extraWebpackConfig": "projects/modulo/webpack.config.js",
+						"commonChunk": false
+					},
+					"configurations": {
+						"production": {
+							"budgets": [
+								{
+									"type": "initial",
+									"maximumWarning": "500kb",
+									"maximumError": "2mb"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "2kb",
+									"maximumError": "2mb"
+								}
+							],
+							"fileReplacements": [
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.prod.ts"
+								}
+							],
+							"outputHashing": "all",
+							"extraWebpackConfig": "projects/modulo/webpack.prod.config.js"
+						},
+						"development": {
+							"buildOptimizer": false,
+							"optimization": false,
+							"vendorChunk": true,
+							"extractLicenses": false,
+							"sourceMap": true,
+							"namedChunks": true
+						}
+					},
+					"defaultConfiguration": "production"
+				},
+				"serve": {
+					"builder": "ngx-build-plus:dev-server",
+					"options": {
+						"port": 5423,
+						"publicHost": "http://localhost:5423",
+						"extraWebpackConfig": "projects/modulo/webpack.config.js"
+					},
+					"configurations": {
+						"production": {
+							"browserTarget": "modulo:build:production",
+							"extraWebpackConfig": "projects/modulo/webpack.prod.config.js"
+						},
+						"development": {
+							"browserTarget": "modulo:build:development"
+						}
+					},
+					"defaultConfiguration": "development"
+				},
+				"extract-i18n": {
+					"builder": "ngx-build-plus:extract-i18n",
+					"options": {
+						"browserTarget": "modulo:build",
+						"extraWebpackConfig": "projects/modulo/webpack.config.js"
+					}
+				},
+				"test": {
+					"builder": "ngx-build-plus:karma",
+					"options": {
+						"main": "projects/modulo/src/test.ts",
+						"polyfills": "projects/modulo/src/polyfills.ts",
+						"tsConfig": "projects/modulo/tsconfig.spec.json",
+						"karmaConfig": "projects/modulo/karma.conf.js",
+						"inlineStyleLanguage": "scss",
+						"assets": [
+							"projects/modulo/src/favicon.ico",
+							"projects/modulo/src/assets"
+						],
+						"styles": [
+							"src/styles.scss"
+						],
+						"scripts": []
+					}
+				}
+			}
 		}
 	},
 	"defaultProject": "angular-schematics-webcomponents"
