--- a/package.json
+++ b/package.json
@@ -12,28 +12,33 @@
     "postrun:local": "ng g @wizco/schematics-webcomponents:init",
     "schematics:intall": "yarn --cwd ./application-webcomponents install",
     "schematics:build": "yarn --cwd ./application-webcomponents build",
-    "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents"
+    "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents",
+    "extra:build": "ng build --project modulo --output-hashing none --aot --build-optimizer",
+    "extra:build:staging": "ng build --configuration=staging --project modulo --output-hashing none --aot --build-optimizer",
+    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
-    "@angular/common": "^15.2.0",
-    "@angular/compiler": "^15.2.0",
-    "@angular/core": "^15.2.0",
-    "@angular/forms": "^15.2.0",
-    "@angular/platform-browser": "^15.2.0",
-    "@angular/platform-browser-dynamic": "^15.2.0",
-    "@angular/router": "^15.2.0",
+    "@angular-architects/module-federation": "^16.0.3",
+    "@angular/animations": "^16.0.5",
+    "@angular/common": "^16.0.5",
+    "@angular/compiler": "^16.0.5",
+    "@angular/core": "^16.0.5",
+    "@angular/elements": "^16.0.5",
+    "@angular/forms": "^16.0.5",
+    "@angular/platform-browser": "^16.0.5",
+    "@angular/platform-browser-dynamic": "^16.0.5",
+    "@angular/router": "^16.0.5",
     "@schematics/angular": "^15.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "updated": "^2.0.5",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.1",
-    "@angular/cli": "~15.2.1",
-    "@angular/compiler-cli": "^15.2.0",
+    "@angular-devkit/build-angular": "^16.0.5",
+    "@angular/cli": "~16.0.5",
+    "@angular/compiler-cli": "^16.0.5",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -41,7 +46,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "ngx-build-plus": "^15.0.0",
+    "ngx-build-plus": "^16.0.0",
     "typescript": "~4.9.4"
   }
 }
