--- a/package.json
+++ b/package.json
@@ -13,23 +13,26 @@
     "schematics:intall": "yarn --cwd ./application-webcomponents install",
     "schematics:build": "yarn --cwd ./application-webcomponents build",
     "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents",
-    "extra:build": "ng build --project modulo --output-hashing none --aot --build-optimizer",
-    "extra:build:staging": "ng build --configuration=staging --project modulo --output-hashing none --aot --build-optimizer",
+    "start:module": "ng serve --project monitoramento",
+    "extra:build": "ng build --project monitoramento --output-hashing none --aot --build-optimizer",
+    "extra:build:staging": "ng build --configuration=staging --project monitoramento --output-hashing none --aot --build-optimizer",
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
   "dependencies": {
-    "@angular-architects/module-federation": "^16.0.3",
+    "@angular-architects/module-federation": "^16.0.4",
     "@angular/animations": "^16.0.5",
     "@angular/common": "^16.0.5",
     "@angular/compiler": "^16.0.5",
     "@angular/core": "^16.0.5",
-    "@angular/elements": "^16.0.5",
+    "@angular/elements": "^16.2.10",
     "@angular/forms": "^16.0.5",
     "@angular/platform-browser": "^16.0.5",
     "@angular/platform-browser-dynamic": "^16.0.5",
     "@angular/router": "^16.0.5",
     "@schematics/angular": "^15.2.4",
+    "@wizco/fenixds-core": "^1.0.5",
+    "@wizco/fenixds-ngx": "^1.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "updated": "^2.0.5",
