--- a/application-webcomponents/src/template-webcomponents/other-files/app.component.ts.template
+++ b/application-webcomponents/src/template-webcomponents/other-files/app.component.ts.template
@@ -4,8 +4,12 @@ import { Router } from '@angular/router';
 @Component({
   selector: '<%= selector %>',
   template: `
-    <ng-container *ngIf="widget;else routerTemplate"></ng-container>
-    <router-outlet #routerTemplate></router-outlet>
+    <ng-template *ngIf="widget; else app">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab veniam dolorum inventore nisi delectus voluptas, soluta nulla, eveniet excepturi saepe tempora, vel facilis quas expedita doloremque qui asperiores veritatis illum!
+    </ng-template>
+    <ng-template #app>
+      <router-outlet></router-outlet>
+    </ng-template>
   `,
   styleUrls: ['./app.component.scss'],
   encapsulation: ViewEncapsulation.None,
@@ -15,7 +19,7 @@ export class AppComponent implements OnChanges {
   @Input() widget = false
   @Input() currentPath!: string;
   @Output() appOutput = new EventEmitter(); // --> custom event in DOOM
-  
+
    ngOnChanges(changes: SimpleChanges) {
     if ('currentPath' in changes) {
       this.router.navigateByUrl(
