--- a/application-webcomponents/src/template-webcomponents/other-files/pages/home/home.component.html.template
+++ b/application-webcomponents/src/template-webcomponents/other-files/pages/home/home.component.html.template
@@ -2,9 +2,13 @@
       <span class="material-icons">arrow_back</span>
       Voltar
 </button>
-<h2 class="display-1 mb-sm"><strong><wc-<%= prefix %>-module></strong></h2>
+<h2 class="display-1 mb-sm">
+    <strong>
+        <%= prefix %>-module
+    </strong>
+</h2>
 <div class="container-wco">
-    <a href="https://wizsolucoes.com.br/fenix-ds" class="btn btn-basic btn-primary btn-sm mb-lg">
+    <a href="https://wizsolucoes.com.br/fenix-ds" class="btn btn-primary btn-sm mb-lg">
         <span class="material-icons">home</span>
         conferir design system
     </a>
