--- a/package.json
+++ b/package.json
@@ -13,20 +13,22 @@
     "schematics:intall": "yarn --cwd ./application-webcomponents install",
     "schematics:build": "yarn --cwd ./application-webcomponents build",
     "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents",
-    "start:module": "ng serve --project monitoramento",
-    "extra:build": "ng build --project monitoramento --output-hashing none --aot --build-optimizer",
-    "extra:build:staging": "ng build --configuration=staging --project monitoramento --output-hashing none --aot --build-optimizer",
+    "start:module": "ng serve --project dwsae",
+    "extra:build": "ng build --project dwsae --output-hashing none --aot --build-optimizer",
+    "extra:build:staging": "ng build --configuration=staging --project dwsae --output-hashing none --aot --build-optimizer",
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
   "dependencies": {
     "@angular-architects/module-federation": "^16.0.4",
     "@angular/animations": "^16.0.5",
+    "@angular/cdk": "^16.2.9",
     "@angular/common": "^16.0.5",
     "@angular/compiler": "^16.0.5",
     "@angular/core": "^16.0.5",
     "@angular/elements": "^16.2.10",
     "@angular/forms": "^16.0.5",
+    "@angular/material": "^16.2.9",
     "@angular/platform-browser": "^16.0.5",
     "@angular/platform-browser-dynamic": "^16.0.5",
     "@angular/router": "^16.0.5",
