--- a/package.json
+++ b/package.json
@@ -13,44 +13,44 @@
     "schematics:intall": "yarn --cwd ./application-webcomponents install",
     "schematics:build": "yarn --cwd ./application-webcomponents build",
     "schematics:link": "npm unlink ./application-webcomponents && npm link ./application-webcomponents",
-    "start:module": "ng serve --project dwsae",
-    "extra:build": "ng build --project dwsae --output-hashing none --aot --build-optimizer",
-    "extra:build:staging": "ng build --configuration=staging --project dwsae --output-hashing none --aot --build-optimizer",
+    "start:module": "ng serve --project sinaweb",
+    "extra:build": "ng build --project sinaweb --output-hashing none --aot --build-optimizer",
+    "extra:build:staging": "ng build --configuration=staging --project sinaweb --output-hashing none --aot --build-optimizer",
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
   "dependencies": {
     "@angular-architects/module-federation": "^16.0.4",
-    "@angular/animations": "^16.0.5",
+    "@angular/animations": "^16.2.10",
     "@angular/cdk": "^16.2.9",
-    "@angular/common": "^16.0.5",
-    "@angular/compiler": "^16.0.5",
-    "@angular/core": "^16.0.5",
+    "@angular/common": "^16.2.10",
+    "@angular/compiler": "^16.2.10",
+    "@angular/core": "^16.2.10",
     "@angular/elements": "^16.2.10",
-    "@angular/forms": "^16.0.5",
+    "@angular/forms": "^16.2.10",
     "@angular/material": "^16.2.9",
-    "@angular/platform-browser": "^16.0.5",
-    "@angular/platform-browser-dynamic": "^16.0.5",
-    "@angular/router": "^16.0.5",
-    "@schematics/angular": "^15.2.4",
+    "@angular/platform-browser": "^16.2.10",
+    "@angular/platform-browser-dynamic": "^16.2.10",
+    "@angular/router": "^16.2.10",
+    "@schematics/angular": "^16.2.7",
     "@wizco/fenixds-core": "^1.0.5",
     "@wizco/fenixds-ngx": "^1.0.5",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "updated": "^2.0.5",
-    "zone.js": "~0.13.1"
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.2",
+    "updated": "^2.0.7",
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.5",
-    "@angular/cli": "~16.0.5",
-    "@angular/compiler-cli": "^16.0.5",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
+    "@angular-devkit/build-angular": "^16.2.7",
+    "@angular/cli": "^16.2.7",
+    "@angular/compiler-cli": "^16.2.10",
+    "@types/jasmine": "~5.1.1",
+    "jasmine-core": "~5.1.1",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
     "ngx-build-plus": "^16.0.0",
     "typescript": "~4.9.4"
   }
